--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "vscode-plugin-webview",
   "displayName": "vscode-plugin-webview",
   "description": "",
-  "version": "1.0.1",
+  "version": "1.0.4",
+  "icon":"webview/img/RN_Webview.png",
   "engines": {
     "vscode": "^1.82.0"
   },
