--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "vscode-plugin-webview",
-  "displayName": "vscode-plugin-webview",
-  "description": "",
-  "version": "1.0.4",
+  "name": "webview",
+  "displayName": "webview",
+  "description": "practice webview , good extension",
+  "version": "1.0.6",
+  "publisher": "Marxu",
   "icon":"webview/img/RN_Webview.png",
   "engines": {
     "vscode": "^1.82.0"
@@ -22,6 +23,11 @@
         "command": "webview.start",
         "title": "Open a webview page",
         "category": "Hello Webview"
+      },
+      {
+        "command": "webview.doRefactor",
+        "title": "doRefactor a webview page",
+        "category": "Hello Webview postMessage"
       }
     ]
   },
