--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "webview",
-  "displayName": "webview",
+  "name": "webviewVscode",
+  "displayName": "webviewVscode",
   "description": "practice webview , good extension",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "publisher": "Marxu",
   "icon":"webview/img/RN_Webview.png",
   "engines": {
